--- a/src/views/profesores/listado.hbs
+++ b/src/views/profesores/listado.hbs
@@ -2,10 +2,10 @@
     <div class="col-sm-12">
         <div class="row">
             <div class="col-sm-6">
-                <h3>Listado estudiantes</h3>
+                <h3>Listado profesores</h3>
             </div>
             <div class="col-sm-6">
-                <a href="/estudiantes/agregar" class="btn btn-success d-block text-white">Agregar estudiantes</a>
+                <a href="/profesores/agregar" class="btn btn-success d-block text-white">Agregar profesores</a>
             </div>
         </div>
     </div>
@@ -16,24 +16,26 @@
                 <th scope="col">ID</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Apellido</th>
+                <th scope="col">Fecha Nacimiento</th>
+                <th scope="col">Profesion</th>
+                <th scope="col">Genero</th>
                 <th scope="col">Email</th>
-                <th scope="col">ID Carrera</th>
-                <th scope="col">Usuario</th>
                 <th scope="col">Opciones</th>
             </tr>
         </thead>
         <tbody>
-            {{#each estudiantes}}
+            {{#each profesores}}
             <tr>
-                <th scope="row">{{idestudiante}}</th>
+                <th scope="row">{{idprofesor}}</th>
                 <td>{{nombre}}</td>
                 <td>{{apellido}}</td>
+                <td>{{fecha_nacimiento}}</td>
+                <td>{{profesion}}</td>
+                <td>{{genero}}</td>
                 <td>{{email}}</td>
-                <td>{{idcarrera}}</td>
-                <td>{{usuario}}</td>
                 <td>
-                    <a href="/estudiantes/actualizar/{{idestudiante}}" class="btn btn-primary text-white">Modificar</a>
-                    <a href="/estudiantes/eliminar/{{idestudiante}}" class="btn btn-danger text-white">Eliminar</a>
+                    <a href="/profesores/actualizar/{{idprofesor}}" class="btn btn-primary text-white">Modificar</a>
+                    <a href="/profesores/eliminar/{{idprofesor}}" class="btn btn-danger text-white">Eliminar</a>
                 </td>
             </tr>
             {{/each}}
