--- a/src/views/profesores/actualizar.hbs
+++ b/src/views/profesores/actualizar.hbs
@@ -13,7 +13,7 @@
                     <input type="text" class="form-control" name="apellido" value="{{profesor.apellido}}" autofocus />
                 </div>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" name="fecha_nacimiento" value="{{profesor.fecha_nacimiento}}" autofocus />
+                    <input type="date" class="form-control" name="fecha_nacimiento" value="{{profesor.fecha_nacimiento}}" autofocus />
                 </div>
                 <div class="form-group mb-3">
                     <input type="text" class="form-control" name="profesion" value="{{profesor.profesion}}" autofocus />
@@ -22,7 +22,7 @@
                     <input type="text" class="form-control" name="genero" value="{{profesor.genero}}" autofocus />
                 </div>
                 <div class="form-group mb-3">
-                    <input type="email" class="form-control" name="email" value="{{estudiante.email}}" autofocus />
+                    <input type="email" class="form-control" name="email" value="{{profesor.email}}" autofocus />
                 </div>
                 <div class="form-group mb-3">
                     <button class="btn btn-success btn-block">Actualizar</button>
