--- a/src/views/profesores/agregar.hbs
+++ b/src/views/profesores/agregar.hbs
@@ -12,7 +12,7 @@
                     <input type="text" class="form-control" name="apellido" placeholder="Apellido del profesor" >
                 </div>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" name="fecha_nacimiento" placeholder="Fecha de nacimiento del profesor" >
+                    <input type="date" class="form-control" name="fecha_nacimiento" placeholder="Fecha de nacimiento del profesor" >
                 </div>
                 <div class="form-group mb-3">
                     <input type="text" class="form-control" name="profesion" placeholder="Profesion del profesor" >
