--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -13,6 +13,8 @@
 <body>
 
     {{> navigation }}
+    
+    {{> message }}
 
     {{{ body }}} <!-- esta es sintaxis propia de handlebars, indica que solo el
 codigo en esta seccion sera dinamico -->
@@ -21,5 +23,11 @@ codigo en esta seccion sera dinamico -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    {{!-- Este script nos permite manejar la asignacion de los grupos --}}
+    <script src="/js/asignarGrupo.js"></script>
+    <script src="/js/ajax.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/manejoAlertas.js"></script>
 </body>
 </html>
