--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -18,6 +18,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/materias">Materias</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/grupos">Grupos</a>
+                </li>
             </ul>
         </div>
     </div>
