--- a/src/views/profesores/actualizar.hbs
+++ b/src/views/profesores/actualizar.hbs
@@ -13,7 +13,7 @@
                     <input type="text" class="form-control" name="apellido" value="{{profesor.apellido}}" autofocus />
                 </div>
                 <div class="form-group mb-3">
-                    <input type="date" class="form-control" name="fecha_nacimiento" value="{{profesor.fecha_nacimiento}}" autofocus />
+                    <input type="date" class="form-control" name="fecha_nacimiento" value="{{profesor.fecha_nacimiento}}" required />
                 </div>
                 <div class="form-group mb-3">
                     <input type="text" class="form-control" name="profesion" value="{{profesor.profesion}}" autofocus />
