--- a/src/views/materias/listado.hbs
+++ b/src/views/materias/listado.hbs
@@ -1,35 +1,37 @@
-<div class="container p-4"></div>
-    <div class="col-sm-12">
-        <div class="row">
-            <div class="col-sm-6">
-                <h3>Listado materias</h3>
-            </div>
-            <div class="col-sm-6">
-                <a href="/materias/agregar" class="btn btn-success d-block text-white">Agregar materias</a>
+<div class="container p-4">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3>Listado materias</h3>
+                </div>
+                <div class="col-sm-6">
+                    <a href="/materias/agregar" class="btn btn-success d-block text-white">Agregar materias</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-12 mt-4">
-        <table class="table table-bordered table-striped">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Materia</th>
-                <th scope="col">Opciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each materias}}
-            <tr>
-                <th scope="row">{{idmateria}}</th>
-                <td>{{materia}}</td>
-                <td>
-                    <a href="/materias/actualizar/{{idmateria}}" class="btn btn-primary text-white">Modificar</a>
-                    <a href="/materias/eliminar/{{idmateria}}" class="btn btn-danger text-white">Eliminar</a>
-                </td>
-            </tr>
-            {{/each}}
-        </tbody>
-        </table>
+        <div class="col-sm-12 mt-4">
+            <table class="table table-bordered table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Materia</th>
+                        <th scope="col">Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each materias}}
+                    <tr>
+                        <th scope="row">{{idmateria}}</th>
+                        <td>{{materia}}</td>
+                        <td>
+                            <a href="/materias/actualizar/{{idmateria}}" class="btn btn-primary text-white">Modificar</a>
+                            <a href="/materias/eliminar/{{idmateria}}" class="btn btn-danger text-white">Eliminar</a>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
