--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,26 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/estudiantes">IMPS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" datatarget="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/estudiantes">Estudiantes <span class="sr-only">(current)</span></a>
+                {{#if user}}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" ariaexpanded="false">
+                        Mantenimientos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/estudiantes">Estudiantes</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/carreras">Carreras</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/materias">Materias</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/profesores">Profesores</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/grupos">Grupos</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/carreras">Carreras</a>
+                    <a href="/logout" class="nav-link text-white">Cerrar Sesion</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profesores">Profesores</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/materias">Materias</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/grupos">Grupos</a>
-                </li>
+            {{/if}}
             </ul>
         </div>
     </div>
